# RobocupReferee

./: CMakeLists.txt  wks.yml
include/robocup_referee/: constants.h  game_state.h  referee_client.h  robot.h  team.h
src/: dump_gc_broadcast.cpp  dump_referees.cpp  gc_diff_msg.cpp  gc_referee.cpp  main_referee.cpp
src/robocup_referee/: RoboCupGameControlData.h  constants.cpp  constants.h  game_state.cpp  gc_msg.cpp  gc_msg.h  referee_client.cpp  referee_client.h  robot.cpp  robot.h  team.cpp
